--- a/index.html
+++ b/index.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Mulish fonts added from google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
-    rel="stylesheet">
-    
-  <title>JetJive Travel</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Mulish fonts added from google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-  <div class="container">
-    <header>
-      <nav>
-        <div class="header-section">
-          <img src="images/Group 40071 (2).png" alt="" class="title-logo">
-        <h1 class="header-title">JetJive <span class="chng-color">Travel</span></h1>
-      </div>
-        <div class="header-nav">
-          <a href="" class="navigation-bar">Home</a>
-          <a href="" class="navigation-bar">Packages</a>
-          <a href="" class="navigation-bar">Testimonial</a>
-          <a href="" class="navigation-bar">Blog</a>
-          <a href="" class="navigation-bar">Contact</a>
+    <title>JetJive Travel</title>
+
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+
+  <body>
+    <div class="container">
+      <header>
+        <!-- header section started -->
+        <nav>
+          <div class="left-header">
+            <img src="images/Group 40071 (2).png" alt="" class="title-logo" />
+            <h1 class="header-title">
+              JetJive <span class="chng-color">Travel</span>
+            </h1>
+          </div>
+          <div class="right-header">
+            <a href="" class="menu home-style">Home</a>
+            <a href="" class="menu">Packages</a>
+            <a href="" class="menu">Testimonial</a>
+            <a href="" class="menu">Blog</a>
+            <a href="" class="menu">Contact</a>
+           
+          </div>
+          <img src="images/frame.svg" alt="" class="menu-img">
+        </nav>
+        <!-- banner section start -->
+        <div class="banner-container">
+          <div class="banner">
+            <div class="banner-title">
+              <h1 class="banner-heading">Explore Your Travel</h1>
+
+              <p class="banner-para">
+                Embark on a journey with 'JetJive Travel .' Unleash wanderlust,
+                discover unique destinations, and create lasting memories. Your
+                next adventure awaits!
+              </p>
+            </div>
+            <div class="banner-input">
+              <input type="text" placeholder="Where go" class="banner-inp" />
+              <input type="text" placeholder="When" class="banner-inp" />
+
+              <input type="text" placeholder="Select Type" class="banner-inp" />
+
+              <div class="banner-btn">
+                <input type="button" value="Find Now" class="btn-primary" />
+              </div>
+            </div>
+          </div>
         </div>
-      </nav>
-    </header>
 
-    <main>
+        <!-- banner section end -->
+      </header>
+      <!-- header section end -->
 
-    </main>
+      <main></main>
+    </div>
 
-
-  </div>
-
-  <footer>
-
-  </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
