added styles in  popular section

--- a/index.html
+++ b/index.html
@@ -63,10 +63,46 @@
         </div>
 
         <!-- banner section end -->
+
+        <!-- popular section  start-->
+        <div class="popular-container">
+          <div class="popular-heading">
+            <h2 class="popular-title">Our Popular Tours</h2>
+            <p class="popular-paragaraph">
+              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
+              pellentesque.
+            </p>
+            <ul>
+              <li class="popular-list">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+              <li class="popular-list">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+              <li class="popular-list">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+            </ul>
+            <p class="popular-paragaraph">
+              Amet consectetur. Vulputate commodo felis molestie risus
+              ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id
+              bibendum nunc senectus semper tincidunt.
+            </p>
+
+            <button class="btn-primary read-more-btn">Read More</button>
+          </div>
+
+          <div class="popular-image">
+            <img src="images/rectangle4.png" alt="" class="rectangle-image">
+          </div>
+        </div>
       </header>
       <!-- header section end -->
 
-      <main></main>
+      <main>
+        <div class="destination">
+          <h2 class="popular-title destination-title">
+            Choose Your Destination
+          </h2>
+
+          <p class="popular-paragaraph destination-para">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
+          pellentesque.</p>
+        </div>
+      </main>
     </div>
 
     <footer></footer>
