added destination section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <a href="" class="menu">Testimonial</a>
             <a href="" class="menu">Blog</a>
             <a href="" class="menu">Contact</a>
-           
           </div>
-          <img src="images/frame.svg" alt="" class="menu-img">
+          <img src="images/frame.svg" alt="" class="menu-img" />
         </nav>
         <!-- banner section start -->
         <div class="banner-container">
@@ -69,25 +68,35 @@
           <div class="popular-heading">
             <h2 class="popular-title">Our Popular Tours</h2>
             <p class="popular-paragaraph">
-              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
-              pellentesque.
+              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+              odio sit massa. Sodales dictumst nec nibh pellentesque.
             </p>
             <ul>
-              <li class="popular-list">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-              <li class="popular-list">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-              <li class="popular-list">Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+              <li class="popular-list">
+                Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+                nullam odio neque diam. Sociis erat at .
+              </li>
+              <li class="popular-list">
+                Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                platea porta lacus. Lectus suspendisse nullam.
+              </li>
+              <li class="popular-list">
+                Accumsan eget et turpis praesent lorem egestas enim elit
+                bibendum. Risus at in.
+              </li>
             </ul>
             <p class="popular-paragaraph">
-              Amet consectetur. Vulputate commodo felis molestie risus
-              ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id
-              bibendum nunc senectus semper tincidunt.
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet. Id bibendum nunc
+              senectus semper tincidunt.
             </p>
 
             <button class="btn-primary read-more-btn">Read More</button>
           </div>
 
           <div class="popular-image">
-            <img src="images/rectangle4.png" alt="" class="rectangle-image">
+            <img src="images/rectangle4.png" alt="" class="rectangle-image" />
           </div>
         </div>
       </header>
@@ -99,8 +108,59 @@
             Choose Your Destination
           </h2>
 
-          <p class="popular-paragaraph destination-para">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh
-          pellentesque.</p>
+          <p class="popular-paragaraph destination-para">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+
+        <div class="destination-places">
+          <!-- first row -->
+          <div class="first-row-img">
+            <img
+              src="images/Rectangle 5.png"
+              alt=""
+              class="places-img first-row"
+            />
+            <img
+              src="images/Rectangle 8.png"
+              alt=""
+              class="places-img first-row"
+            />
+          </div>
+
+          <!-- second row -->
+          <div class="second-row-img">
+            <img
+              src="images/Rectangle 6.png"
+              alt=""
+              class="places-img second-row"
+            />
+            <img
+              src="images/Rectangle 7.png"
+              alt=""
+              class="places-img second-row"
+            />
+            <img
+              src="images/Rectangle 9.png"
+              alt=""
+              class="places-img second-row"
+            />
+          </div>
+
+          <!-- third row -->
+          <div class="third-row-img">
+            <img
+              src="images/Rectangle 11.png"
+              alt=""
+              class="places-img third-row"
+            />
+            <img
+              src="images/Rectangle 10.png"
+              alt=""
+              class="places-img third-row"
+            />
+          </div>
         </div>
       </main>
     </div>
