choose section added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- header section started -->
         <nav>
           <div class="left-header">
-            <img src="images/Group 40071 (2).png" alt="" class="title-logo" />
+            <img src="images/logo.png" alt="" class="title-logo" />
             <h1 class="header-title">
               JetJive <span class="chng-color">Travel</span>
             </h1>
@@ -96,13 +96,14 @@
           </div>
 
           <div class="popular-image">
-            <img src="images/rectangle4.png" alt="" class="rectangle-image" />
+            <img src="images/mountain.png" alt="" class="rectangle-image" />
           </div>
         </div>
       </header>
       <!-- header section end -->
 
       <main>
+        <!-- Destination Section Start -->
         <div class="destination">
           <h2 class="popular-title destination-title">
             Choose Your Destination
@@ -118,12 +119,12 @@
           <!-- first row -->
           <div class="first-row-img">
             <img
-              src="images/Rectangle 5.png"
+              src="images/maldives.png"
               alt=""
               class="places-img first-row"
             />
             <img
-              src="images/Rectangle 8.png"
+              src="images/indonesia.png"
               alt=""
               class="places-img first-row"
             />
@@ -132,17 +133,17 @@
           <!-- second row -->
           <div class="second-row-img">
             <img
-              src="images/Rectangle 6.png"
+              src="images/srilanka.png"
               alt=""
               class="places-img second-row"
             />
             <img
-              src="images/Rectangle 7.png"
+              src="images/america.png"
               alt=""
               class="places-img second-row"
             />
             <img
-              src="images/Rectangle 9.png"
+              src="images/kashmir.png"
               alt=""
               class="places-img second-row"
             />
@@ -151,17 +152,59 @@
           <!-- third row -->
           <div class="third-row-img">
             <img
-              src="images/Rectangle 11.png"
+              src="images/bangladesh.png"
               alt=""
               class="places-img third-row"
             />
             <img
-              src="images/Rectangle 10.png"
+              src="images/bandarban.png"
               alt=""
               class="places-img third-row"
             />
           </div>
         </div>
+        <!-- Destination Section End -->
+
+        <!-- choose section start -->
+        <div class="choose-section">
+          <h2 class="popular-title destination-title">Why Choose Us</h2>
+          <p class="popular-paragaraph destination-para">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+
+        <div class="choose-card-container">
+          <div class="pick-hotels">
+            <img src="images/hotel.svg" alt="" class="card-logo" />
+            <h2 class="card-title">Handpicked Hotels</h2>
+            <p class="card-details">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="services-explain">
+            <img src="images/map.svg" alt="" class="card-logo" />
+            <h2 class="card-title">World Class Service</h2>
+            <p class="card-details">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          
+        </div>
+        <div class="price-guarantee">
+          <img src="images/price.svg" alt="" class="card-logo" />
+          <h2 class="card-title">Best Price Guarantee</h2>
+          <p class="card-details">
+            Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim
+            adipiscing quis. Habitant adipiscing risus natoque aliquet.
+          </p>
+        </div>
+
+        <!-- choose section end -->
       </main>
     </div>
 
