discount section added

--- a/index.html
+++ b/index.html
@@ -118,49 +118,73 @@
         <div class="destination-places">
           <!-- first row -->
           <div class="first-row-img">
-            <img
-              src="images/maldives.png"
-              alt=""
-              class="places-img first-row"
-            />
-            <img
-              src="images/indonesia.png"
-              alt=""
-              class="places-img first-row"
-            />
+            <div class="img">
+              <img
+                src="images/maldives.png"
+                alt=""
+                class="places-img first-row"
+              />
+              <p class="p1-img">Maldives</p>
+            </div>
+            <div class="img">
+              <img
+                src="images/indonesia.png"
+                alt=""
+                class="places-img first-row"
+              />
+              <p class="p1-img p2-img">Indonesia</p>
+            </div>
           </div>
 
           <!-- second row -->
           <div class="second-row-img">
-            <img
-              src="images/srilanka.png"
-              alt=""
-              class="places-img second-row"
-            />
-            <img
-              src="images/america.png"
-              alt=""
-              class="places-img second-row"
-            />
-            <img
-              src="images/kashmir.png"
-              alt=""
-              class="places-img second-row"
-            />
+            <div class="img">
+              <img
+                src="images/srilanka.png"
+                alt=""
+                class="places-img second-row"
+              />
+              <p class="p1-img p3-img">Srilanka</p>
+            </div>
+
+            <div class="img">
+              <img
+                src="images/america.png"
+                alt=""
+                class="places-img second-row"
+              />
+              <p class="p1-img p4-img">North America</p>
+            </div>
+
+            <div class="img">
+              <img
+                src="images/kashmir.png"
+                alt=""
+                class="places-img second-row"
+              />
+              <p class="p1-img p5-img">Kashmir</p>
+            </div>
           </div>
 
           <!-- third row -->
           <div class="third-row-img">
-            <img
-              src="images/bangladesh.png"
-              alt=""
-              class="places-img third-row"
-            />
-            <img
-              src="images/bandarban.png"
-              alt=""
-              class="places-img third-row"
-            />
+            <div class="img">
+              <img
+                src="images/bangladesh.png"
+                alt=""
+                class="places-img third-row"
+              />
+              <p class="p1-img p6-img">Bangladesh</p>
+            </div>
+
+            <div class="img">
+              <img
+                src="images/bandarban.png"
+                alt=""
+                class="places-img third-row"
+              />
+              <p class="p1-img p7-img">Bandarban</p>
+            </div>
           </div>
         </div>
         <!-- Destination Section End -->
@@ -193,18 +217,93 @@
               Habitant adipiscing risus natoque aliquet.
             </p>
           </div>
-          
         </div>
         <div class="price-guarantee">
           <img src="images/price.svg" alt="" class="card-logo" />
           <h2 class="card-title">Best Price Guarantee</h2>
           <p class="card-details">
-            Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim
-            adipiscing quis. Habitant adipiscing risus natoque aliquet.
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet.
           </p>
         </div>
 
         <!-- choose section end -->
+
+        <!-- discount countainer start -->
+        <div class="discount-container">
+          <h2 class="popular-title destination-title">Deals & Discounts</h2>
+          <p class="popular-paragaraph destination-para">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+
+        <div class="discount-offer">
+          <div class="location-time">
+            <p class="date">
+              <img src="images/location.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="people">
+              <img src="images/people.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="location">
+              <img src="images/time.svg" alt="" class="time-img" /> 7days
+            </p>
+            <h2 class="place-name">Tour To Satorini</h2>
+            <p class="place-details">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="place-prices">Price: $1300-$1500</p>
+            <button class="btn-primary place-btn">Book Now</button>
+          </div>
+        </div>
+          <div class="discount-offer2">
+            <div class="location-time flip-time">
+              <p class="date">
+                <img src="images/location.svg" alt="" class="time-img" /> 7days
+              </p>
+              <p class="people">
+                <img src="images/people.svg" alt="" class="time-img" /> 7days
+              </p>
+              <p class="location">
+                <img src="images/time.svg" alt="" class="time-img" /> 7days
+              </p>
+              <h2 class="place-name">Tour To Satorini</h2>
+              <p class="place-details">
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing.
+              </p>
+              <p class="place-prices">Price: $1300-$1500</p>
+              <button class="btn-primary place-btn">Book Now</button>
+            </div>
+          </div>
+
+          <div class="discount-offer3">
+            <div class="location-time">
+              <p class="date">
+                <img src="images/location.svg" alt="" class="time-img" /> 7days
+              </p>
+              <p class="people">
+                <img src="images/people.svg" alt="" class="time-img" /> 7days
+              </p>
+              <p class="location">
+                <img src="images/time.svg" alt="" class="time-img" /> 7days
+              </p>
+              <h2 class="place-name">Tour To Satorini</h2>
+              <p class="place-details">
+                Amet consectetur. Vulputate commodo felis molestie risus ornare
+                nulla amet et. Libero commodo sagittis dignissim adipiscing
+                quis. Habitant adipiscing.
+              </p>
+              <p class="place-prices">Price: $1300-$1500</p>
+              <button class="btn-primary place-btn">Book Now</button>
+            </div>
+          </div>
+          <button class="btn-primary packages-btn">See All Packages</button>
       </main>
     </div>
 
