added perfect section

--- a/index.html
+++ b/index.html
@@ -260,50 +260,117 @@
             <button class="btn-primary place-btn">Book Now</button>
           </div>
         </div>
-          <div class="discount-offer2">
-            <div class="location-time flip-time">
-              <p class="date">
-                <img src="images/location.svg" alt="" class="time-img" /> 7days
-              </p>
-              <p class="people">
-                <img src="images/people.svg" alt="" class="time-img" /> 7days
-              </p>
-              <p class="location">
-                <img src="images/time.svg" alt="" class="time-img" /> 7days
-              </p>
-              <h2 class="place-name">Tour To Satorini</h2>
-              <p class="place-details">
-                Amet consectetur. Vulputate commodo felis molestie risus ornare
-                nulla amet et. Libero commodo sagittis dignissim adipiscing
-                quis. Habitant adipiscing.
-              </p>
-              <p class="place-prices">Price: $1300-$1500</p>
-              <button class="btn-primary place-btn">Book Now</button>
-            </div>
+        <div class="discount-offer2">
+          <div class="location-time flip-time">
+            <p class="date">
+              <img src="images/location.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="people">
+              <img src="images/people.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="location">
+              <img src="images/time.svg" alt="" class="time-img" /> 7days
+            </p>
+            <h2 class="place-name">Tour To Satorini</h2>
+            <p class="place-details">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="place-prices">Price: $1300-$1500</p>
+            <button class="btn-primary place-btn">Book Now</button>
+          </div>
+        </div>
+
+        <div class="discount-offer3">
+          <div class="location-time">
+            <p class="date">
+              <img src="images/location.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="people">
+              <img src="images/people.svg" alt="" class="time-img" /> 7days
+            </p>
+            <p class="location">
+              <img src="images/time.svg" alt="" class="time-img" /> 7days
+            </p>
+            <h2 class="place-name">Tour To Satorini</h2>
+            <p class="place-details">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="place-prices">Price: $1300-$1500</p>
+            <button class="btn-primary place-btn">Book Now</button>
+          </div>
+        </div>
+        <button class="btn-primary packages-btn">See All Packages</button>
+        <!-- discount countainer end -->
+
+        <!-- perfect place container start -->
+
+        <div class="perfect-place">
+          <div class="perfect-wrapper">
+            <h1 class="popular-title perfect-title">
+              A Simple Perfect Place To Get Lost
+            </h1>
+            <p class="perfect-paragraph">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            </p>
+
+            <ul>
+              <li>
+                Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                platea porta lacus. Lectus suspendisse nullam.
+              </li>
+
+              <li>
+                Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                platea porta lacus. Lectus suspendisse nullam.
+              </li>
+            </ul>
+
+            <button class="btn-primary">See More</button>
           </div>
 
-          <div class="discount-offer3">
-            <div class="location-time">
-              <p class="date">
-                <img src="images/location.svg" alt="" class="time-img" /> 7days
-              </p>
-              <p class="people">
-                <img src="images/people.svg" alt="" class="time-img" /> 7days
-              </p>
-              <p class="location">
-                <img src="images/time.svg" alt="" class="time-img" /> 7days
-              </p>
-              <h2 class="place-name">Tour To Satorini</h2>
-              <p class="place-details">
-                Amet consectetur. Vulputate commodo felis molestie risus ornare
-                nulla amet et. Libero commodo sagittis dignissim adipiscing
-                quis. Habitant adipiscing.
-              </p>
-              <p class="place-prices">Price: $1300-$1500</p>
-              <button class="btn-primary place-btn">Book Now</button>
+          <div class="perfect-video">
+            <div class="perfect-video-title">
+              <h2 class="perfect-video-title">
+                Watch Our Mountain in Bangladesh
+              </h2>
+            </div>
+            <div class="perfect-video-img">
+              <!-- Background Image -->
+              <div class="video-background">
+                <div class="video-controls">
+                  <div class="video-img">
+                    <img src="images/pause.svg" alt="" class="pause-img" />
+                    <p class="video-img-para">0.00</p>
+                  </div>
+                  <div class="video-icons">
+                    <img
+                      src="images/volume-x.svg"
+                      alt=""
+                      class="perfect-icons"
+                    />
+                    <img
+                      src="images/maximuz.svg"
+                      alt=""
+                      class="perfect-icons"
+                    />
+                    <img
+                      src="images/options.svg"
+                      alt=""
+                      class="perfect-icons"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- Video Controls -->
             </div>
           </div>
-          <button class="btn-primary packages-btn">See All Packages</button>
+        </div>
       </main>
     </div>
 
