added footer section

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </div>
         </div>
       </div>
-        <!-- newsletter section start -->
+      <!-- newsletter section start -->
       <div class="newsletter">
         <div class="newsletter-container-left">
           <h2 class="newsletter-title">
@@ -367,7 +367,25 @@
 
   <footer>
     <div class="footer-section">
+      <div class="footer-heading">
+        <img src="images/logo.png" alt="" class="footer-img">
+        <h2 class="footer-head">
+          JetJive <span class="footer-head-right">Travel</span>
+        </h2>
+      </div>
 
+      <div class="footer-details">
+        <p class="footer-paragraph">
+          dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas
+          vitae elementum ultricies nullam.
+        </p>
+
+        <hr class="divider footer-hr" />
+        <img src="images/social-sites.svg" alt="" class="footer-socials">
+      </div>
+
+
+      <hr class="divider footer-divider" />
     </div>
   </footer>
 </body>
