footer section styles added

--- a/index.html
+++ b/index.html
@@ -382,10 +382,12 @@
 
         <hr class="divider footer-hr" />
         <img src="images/social-sites.svg" alt="" class="footer-socials">
+
+              <hr class="divider footer-divider" />
+              
+              <p class="copy-rights">2017, All Rights Reserved.</p>
       </div>
 
-
-      <hr class="divider footer-divider" />
     </div>
   </footer>
 </body>
