added responsive styles

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <!-- header section started -->
         <nav>
           <div class="left-header">
-            <img src="./images/logo.png" alt="" class="title-logo" />
+            <img src="./resources/logo.png" alt="" class="title-logo" />
             <h1 class="header-title">
               JetJive <span class="chng-color">Travel</span>
             </h1>
           </div>
           <div class="right-header">
-            <a href="" class="menu home-style">Home</a>
-            <a href="" class="menu">Packages</a>
-            <a href="" class="menu">Testimonial</a>
-            <a href="" class="menu">Blog</a>
-            <a href="" class="menu">Contact</a>
+            <a href="#" class="menu home-style">Home</a>
+            <a href="#" class="menu">Packages</a>
+            <a href="#" class="menu">Testimonial</a>
+            <a href="#" class="menu">Blog</a>
+            <a href="#" class="menu">Contact</a>
           </div>
-          <img src="./images/frame.svg" alt="" class="menu-img" />
+          <img src="./resources/frame.svg" alt="" class="menu-img" />
         </nav>
         <!-- banner section start -->
         <div class="banner-container">
@@ -96,7 +96,7 @@
           </div>
 
           <div class="popular-image">
-            <img src="./images/mountain.png" alt="" class="rectangle-image" />
+            <img src="./resources/mountain.png" alt="" class="rectangle-image" />
           </div>
         </div>
       </header>
@@ -120,7 +120,7 @@
           <div class="first-row-img">
             <div class="img">
               <img
-                src="./images/maldives.png"
+                src="./resources/maldives.png"
                 alt=""
                 class="places-img first-row"
               />
@@ -128,7 +128,7 @@
             </div>
             <div class="img">
               <img
-                src="./images/indonesia.png"
+                src="./resources/indonesia.png"
                 alt=""
                 class="places-img first-row"
               />
@@ -140,7 +140,7 @@
           <div class="second-row-img">
             <div class="img">
               <img
-                src="./images/srilanka.png"
+                src="./resources/srilanka.png"
                 alt=""
                 class="places-img second-row"
               />
@@ -149,7 +149,7 @@
 
             <div class="img">
               <img
-                src="./images/america.png"
+                src="./resources/america.png"
                 alt=""
                 class="places-img second-row"
               />
@@ -158,7 +158,7 @@
 
             <div class="img">
               <img
-                src="./images/kashmir.png"
+                src="./resources/kashmir.png"
                 alt=""
                 class="places-img second-row"
               />
@@ -170,7 +170,7 @@
           <div class="third-row-img">
             <div class="img">
               <img
-                src="./images/bangladesh.png"
+                src="./resources/bangladesh.png"
                 alt=""
                 class="places-img third-row"
               />
@@ -179,7 +179,7 @@
 
             <div class="img">
               <img
-                src="./images/bandarban.png"
+                src="./resources/bandarban.png"
                 alt=""
                 class="places-img third-row"
               />
@@ -200,7 +200,7 @@
 
         <div class="choose-card-container">
           <div class="pick-hotels">
-            <img src="./images/hotel.svg" alt="" class="card-logo" />
+            <img src="./resources/hotel.svg" alt="" class="card-logo" />
             <h2 class="card-title">Handpicked Hotels</h2>
             <p class="card-details">
               Amet consectetur. Vulputate commodo felis molestie risus ornare
@@ -209,7 +209,7 @@
             </p>
           </div>
           <div class="services-explain">
-            <img src="./images/map.svg" alt="" class="card-logo" />
+            <img src="./resources/map.svg" alt="" class="card-logo" />
             <h2 class="card-title">World Class Service</h2>
             <p class="card-details">
               Amet consectetur. Vulputate commodo felis molestie risus ornare
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class="price-guarantee">
-          <img src="./images/price.svg" alt="" class="card-logo" />
+          <img src="./resources/price.svg" alt="" class="card-logo" />
           <h2 class="card-title">Best Price Guarantee</h2>
           <p class="card-details">
             Amet consectetur. Vulputate commodo felis molestie risus ornare
@@ -242,13 +242,13 @@
         <div class="discount-offer">
           <div class="location-time">
             <p class="date">
-              <img src="./images/location.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/location.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="people">
-              <img src="./images/people.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/people.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="location">
-              <img src="./images/time.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/time.svg" alt="" class="time-img" /> 7days
             </p>
             <h2 class="place-name">Tour To Satorini</h2>
             <p class="place-details">
@@ -263,13 +263,13 @@
         <div class="discount-offer2">
           <div class="location-time flip-time">
             <p class="date">
-              <img src="./images/location.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/location.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="people">
-              <img src="./images/people.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/people.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="location">
-              <img src="./images/time.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/time.svg" alt="" class="time-img" /> 7days
             </p>
             <h2 class="place-name">Tour To Satorini</h2>
             <p class="place-details">
@@ -285,13 +285,13 @@
         <div class="discount-offer3">
           <div class="location-time">
             <p class="date">
-              <img src="./images/location.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/location.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="people">
-              <img src="./images/people.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/people.svg" alt="" class="time-img" /> 7days
             </p>
             <p class="location">
-              <img src="./images/time.svg" alt="" class="time-img" /> 7days
+              <img src="./resources/time.svg" alt="" class="time-img" /> 7days
             </p>
             <h2 class="place-name">Tour To Satorini</h2>
             <p class="place-details">
@@ -344,30 +344,30 @@
               <div class="video-background">
                 <div class="video-controls video-setting">
                   <div class="video-img">
-                    <img src="./images/pause.svg" alt="" class="pause-img" />
+                    <img src="./resources/pause.svg" alt="" class="pause-img" />
                     <p class="video-img-para">0.00</p>
                   </div>
                   <div class="video-icons">
                     <img
-                      src="./images/volume-x.svg"
+                      src="./resources/volume-x.svg"
                       alt=""
                       class="perfect-icons"
                     />
                     <img
-                      src="./images/maximuz.svg"
+                      src="./resources/maximuz.svg"
                       alt=""
                       class="perfect-icons"
                     />
                     <img
-                      src="./images/options.svg"
+                      src="./resources/options.svg"
                       alt=""
                       class="perfect-icons"
                     />
                   </div>
                 </div>
                 <div class="vertical-line">
-                  <img src="./images/groups.svg" alt="" class="hr-first-side" />
-                  <img src="./images/hr.png" alt="" class="hr-second-side" />
+                  <img src="./resources/groups.svg" alt="" class="hr-first-side" />
+                  <img src="./resources/hr.png" alt="" class="hr-second-side" />
                 </div>
               </div>
 
@@ -412,7 +412,7 @@
     <footer>
       <div class="footer-section">
         <div class="footer-heading">
-          <img src="./images/logo.png" alt="" class="footer-img" />
+          <img src="./resources/logo.png" alt="" class="footer-img" />
           <h2 class="footer-head">
             JetJive <span class="footer-head-right">Travel</span>
           </h2>
@@ -426,7 +426,7 @@
           </p>
 
           <hr class="divider footer-hr" />
-          <img src="./images/social-sites.svg" alt="" class="footer-socials" />
+          <img src="./resources/social-sites.svg" alt="" class="footer-socials" />
 
           <hr class="divider footer-divider" />
 
